# Jaros

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.jarify/EXT-001/: design.md  index.json  intent.md  requirements.md  tasks.md
.jarify/EXT-002/: design.md  index.json  intent.md  requirements.md  tasks.md
.jarify/EXT-003/: design.md  index.json  intent.md  requirements.md  tasks.md
.jarify/EXT-004/: design.md  index.json  intent.md  requirements.md  tasks.md
.jarify/EXT-005/: design.md  index.json  intent.md  requirements.md  tasks.md
.jarify/EXT-006/: design.md  index.json  intent.md  requirements.md  tasks.md
.jarify/EXT-007/: design.md  index.json  intent.md  requirements.md  tasks.md
.jarify/EXT-008/: design.md  index.json  intent.md  requirements.md  tasks.md
.jarify/EXT-009/: design.md  index.json  intent.md  requirements.md  tasks.md
.jarify/EXT-010/: design.md  index.json  requirements.md  tasks.md
.jarify/EXT-011/: design.md  index.json  requirements.md  tasks.md
.jarify/EXT-012/: design.md  index.json  requirements.md  tasks.md
.jarify/EXT-013/: design.md  index.json  requirements.md  tasks.md
.jarify/EXT-014/: design.md  index.json  requirements.md  tasks.md
.jarify/EXT-015/: design.md  index.json  intent.md  requirements.md  tasks.md
.jarify/EXT-016/: design.md  index.json  intent.md  requirements.md  tasks.md
.jarify/PRIME-001/: design.md  intent.md
agent-kit/: README.md
agent-kit/reference/: architecture.md  public-api.md  workflow.md
agent-kit/templates/: agent.py  eval.json  schedule.json  tool.py
config/: llm.json  permissions.json
console/: README.md  index.html  package-lock.json  package.json  shots.mjs  smoke.mjs  tsconfig.json  vite.config.ts
console/server/: index.ts  jarosData.ts  jaros_introspect.py
console/src/: App.tsx  api.ts  main.tsx  theme.css
docs/: agent-playbook.md  architecture.md  building-agents.md  console.md  getting-started.md  my_agent.py  why-jaros.md
examples/: README.md
examples/agents/: echo_agent.py  greeter_agent.py
examples/plugins/: echo_agent.py  greeter_agent.py
examples/readonly/: README.md
examples/swarm/: README.md
examples/tools/: greet_tool.py
jaros/: __init__.py  cli.py  daemon.py  registry.py
jaros/_starter/: __init__.py
jaros/comms/: __init__.py  fs.py  queue.py
jaros/core/: __init__.py  decision.py  decision_gate.py  json_value.py  reasoning_boundary.py
jaros_console/: __init__.py  data.py  server.py
launch/: PRELAUNCH.md  README.md  quickstart-audit.md  reference-agents.md
scripts/: check-comms.ts  check-no-server.ts  check-planes.ts  check_comms.py  check_determinism.py  check_no_server.py  check_planes.py  check_zero_infra.py  entrypoint.sh  generate_cli_image.py  generate_demo_gif.py  generate_swarm_decisions_image.py  generate_swarm_image.py  git_commit.py  sync_console_dist.py
src/: main.ts
tests/: test_agent_pool.py  test_agent_thread.py  test_audit.py  test_capabilities.py  test_check_determinism.py  test_check_no_server.py  test_check_zero_infra.py  test_cli.py  test_cli_replay.py  test_console_server.py  test_coordination.py  test_cron.py  test_daemon.py  test_daemon_scheduling.py  test_decision.py  test_decision_gate.py  test_decision_log.py  test_determinism.py  test_distributed.py  test_dynamic_tools.py  test_eval.py  test_executor.py  test_fs.py  test_harness.py  test_llm.py  test_queue.py  test_readonly_agents.py  test_recover.py  test_registry.py  test_replication.py  test_rules.py  test_scheduler.py  test_state_log.py  test_state_machine.py  test_state_model.py  test_swarm.py
(+131 files in other folders)
