[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jaros"
version = "0.1.0"
description = "An unbreakable distributed state machine that orchestrates AI agents as lightweight threads."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jared Pilcher" }]
keywords = ["agents", "llm", "state-machine", "orchestration", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/jaredpilcher/Jaros"
Repository = "https://github.com/jaredpilcher/Jaros"
Issues = "https://github.com/jaredpilcher/Jaros/issues"

[project.scripts]
jaros = "jaros.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pillow>=10"]

[tool.setuptools.packages.find]
include = ["jaros*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
