[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jaros"
# Single source of truth: jaros/__init__.py:__version__ (see [tool.setuptools.dynamic]).
dynamic = ["version"]
description = "A zero-infrastructure runtime that makes agent systems reproducible, testable, and capability-safe — a durable, replayable state machine orchestrating AI agents as lightweight threads."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jared Pilcher" }]
keywords = ["agents", "llm", "state-machine", "orchestration", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/jaredpilcher/Jaros"
Repository = "https://github.com/jaredpilcher/Jaros"
Issues = "https://github.com/jaredpilcher/Jaros/issues"

[project.scripts]
jaros = "jaros.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pillow>=10"]

[tool.setuptools.dynamic]
version = { attr = "jaros.__version__" }

[tool.setuptools.packages.find]
include = ["jaros*"]

# Ship the bundled starter agents/tools/evals/schedules inside the wheel so
# `jaros init --with-examples` works from a plain `pip install jaros`; and ship
# the prebuilt console SPA so `jaros serve` / `jaros console` need no Node.
[tool.setuptools.package-data]
"jaros._starter" = ["agents/*.py", "tools/*.py", "evals/*.json", "schedules/*.json"]
"jaros_console" = ["_dist/*", "_dist/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
